# insight-monitor-code

./: .gitignore  .pre-commit-config.yaml  AI_AGENT_MVP_PLAN.md  COLABORATORS.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  package-lock.json  package.json
.ai-context/: AGENT_HANDOFF.md  AGENT_INSTRUCTIONS.md  API_CONTRACTS.md  ARCHITECTURE.md  BRAND_GUIDELINES.md  CODING_STANDARDS.md  CURRENT_SPRINT.md  DOMAIN_MODEL.md  ERROR_PHILOSOPHY.md  PORT_CONTRACTS.md  README.md  SECURITY_RULES.md
.github/: dependabot.yml
.opencode/: config.json
backend/: .env.example  config.py  main.py  pyproject.toml
backend/application/use_cases/: build_sessions.py  get_session.py  infer_intent.py  ingest_event.py  manage_tickets.py
backend/backend/: config.py  main.py
backend/backend/models/: __init__.py  intent_record.py
backend/backend/pipeline/: session_builder.py
backend/backend/routes/: events.py  health.py  sessions.py
backend/backend/storage/: database.py  repositories.py
backend/data/: insight_monitor.db
backend/domain/entities/: intent_record.py  raw_event.py  session_context.py  ticket.py
backend/domain/ports/: repositories.py  services.py
backend/infrastructure/: di.py
backend/infrastructure/db/in_memory/: repositories.py
backend/infrastructure/db/sqlite/: database.py  repositories.py  unit_of_work.py
backend/models/: raw_event.py  session_context.py
backend/pipeline/: inference_pipeline.py  intent_parser.py  prompt_builder.py  session_builder.py
backend/routes/: auth.py  events.py  health.py  sessions.py  tickets.py
backend/services/: intent_parser.py  llm_service.py  prompt_builder.py
backend/storage/: repositories.py
backend/tests/: conftest.py  test_capture_agent.py  test_event_sender.py  test_events.py  test_health.py  test_input_monitor.py  test_models.py  test_repositories.py  test_sessions.py  test_unit_pipeline.py  test_unit_routes.py  test_unit_tickets.py  test_unit_use_cases.py  test_wayland_window_tracker.py
capture/: agent.py  event_sender.py  input_monitor.py  screenshot_capture.py  window_tracker.py
dashboard/: package-lock.json  package.json  vite.config.ts
docs/: README.md  confidence-model.md  llm-migration.md  monitoring-visibility.md  platform-compatibility.md
frontend/: index.html  package-lock.json  package.json
scripts/: generate_types.py  insight-backend.service  insight-capture.service  (+10 more)
(+79 files in other folders)
