[project]
name = "insight-monitor-backend"
version = "0.1.0"
description = "Insight Monitor Backend API"
authors = [
    {name = "Insight Monitor"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.9",
    "pillow>=11.0.0",
    "httpx>=0.28.0",
    "mss>=10.0.0",
    "pynput>=1.7.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py", "validate_*.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
